Cloudwatch batching